done, thanks Randy!

--- a/short-response/q1.md
+++ b/short-response/q1.md
@@ -4,7 +4,9 @@ When should Context be used?
 
 # Answer
 
-
+Context should be used y
+data / values that we want to pass through multiples compontents
+to avoid prop drilling
 
 
 # Feedback
