--- a/short-response/q2.md
+++ b/short-response/q2.md
@@ -4,7 +4,14 @@ What are the steps to incorporating context into your application?
 
 # Answer
 
+Import create context from react 
+assign createContext to a constant and 
+export said constant
+wrap app in the provider
 
+   ```js
+    const {allPokemon, userInput} = useContext(pokemonContext)
+    ```
 # Feedback
 
 X/3 points
