--- a/short-response/q3.md
+++ b/short-response/q3.md
@@ -23,6 +23,7 @@ import { useContext, useState } from 'react'
 import SomeContext from "./context/SomeContext";
 
 const Child = () => {
+  const data = use(SomeContext)
   return <p>{data}</p>
 }
 
@@ -34,7 +35,9 @@ const App = () => {
   const data = 'some data to provide via context';
 
   return (
+    <SomeContext.Provider value ={data}>
     <Parent />
+    </SomeContext.Provider>
   )
 }
 ```
